<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/TitlePlaceholder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitlePlaceholder"
        android:layout_marginTop="3dip"
        android:background="@color/custom_label_background_color"
        android:paddingBottom="3dip"
        android:paddingLeft="7dip"
        android:paddingTop="3dip"
        android:text="@string/NewRentalLabel"
        android:textAppearance="@style/MovieListTitle" />

    <AutoCompleteTextView
        android:id="@+id/movieNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:hint="@string/MovieName" >

        <requestFocus />
    </AutoCompleteTextView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movieNameText"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/rentItButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/RentItButton" />

        <Button
            android:id="@+id/neverMindButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:text="@string/NeverMindButton" />
    </LinearLayout>

    <ImageView
        android:id="@+id/autoUpdateGuy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/TitleImage"
        android:src="@drawable/redbox_signup_guy" />

	<Button
	    android:id="@+id/redboxLoginButton"
	    android:layout_width="160dp"
	    android:layout_height="60dp"
        android:layout_alignLeft="@+id/autoUpdateGuy"
        android:layout_alignBottom="@+id/autoUpdateGuy"
	    android:layout_marginBottom="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/SetItUp" />
    
</RelativeLayout>