<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/TitlePlaceholder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/CredentialsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitlePlaceholder"
        android:background="@color/custom_label_background_color"
        android:paddingBottom="3dip"
        android:paddingLeft="7dip"
        android:paddingTop="3dip"
        android:layout_marginTop="3dip"
        android:text="@string/LoginInfo"
        android:textAppearance="@style/MovieListTitle" />

    <Button
        android:id="@+id/AutoScrapeInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CredentialsLabel"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:drawableLeft="@drawable/ic_menu_help_48"
        android:text="@string/WhatsThisThen" />

    <EditText
        android:id="@+id/RedboxUsernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AutoScrapeInfoButton"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:hint="@string/RedboxUsername"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/RedboxPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/RedboxUsernameText"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:hint="@string/RedboxPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/OkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RedboxPasswordText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="70dip"
        android:layout_marginRight="70dip"
        android:layout_marginTop="5dip"
        android:text="@string/Ok" />

    <Button
        android:id="@+id/CancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OkButton"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="70dip"
        android:layout_marginRight="70dip"
        android:layout_marginTop="5dip"
        android:text="@string/NeverMindButton" />
    
</RelativeLayout>